Fixed memory leak issue in the server + Modified signup api to accept details without profile picture.